--- a/app/template/fontend/template1/include/footer.html
+++ b/app/template/fontend/template1/include/footer.html
@@ -130,20 +130,35 @@
    </div>
 </div>
 <div class="row" id="footer">
-    <div class="container" >
-            <p style="margin-top: 10px"><strong style="color:#e98348; font-size:15px;">NGOC DAN HOTELS AND RESORTS SUPPLIES.,JSC</strong></p>
-      <div class="col-md-6 col-sm-6" style="text-align: center;">
-          <p><strong style="color:#e98348;">Phòng kinh doanh Hà  Nội</strong></p>
+    <div class="container" style="padding-bottom: 30px" >
+            <p style="margin-top: 10px"><strong style="color:#e98348; font-size:15px;">Danco Hotel Supplies., JSC</strong></p>
+      <div class="col-md-6 col-sm-6" style="text-align: left;">
+          <!-- <p><strong style="color:#e98348;">Phòng kinh doanh Hà  Nội</strong></p>
           <p>Kinh doanh 1 - Anna Oanh 091 332 5588</p>
           <p>Kinh doanh 2 - Michal Dũng 098 662 8120</p>
           <p>Địa chỉ : 1038, Đê La Thành, Ba Đình, Hà Nội.</p>
-          <p>Email: noithatngocdan@gmail.com</p>
+          <p>Email: noithatngocdan@gmail.com</p> -->
+          <p><strong style="color:#e98348;"> Hội sở:</strong> 1038, Đê La Thành, Ba Đình, Hà Nội</p>
+          <p><strong style="color:#e98348;">Văn phòng Đà Nẵng:</strong> 150, Ỷ Lan Nguyên Phi, Hải Châu, Đà Nẵng</p>
+          <p><strong style="color:#e98348;">Nhà máy:</strong> Khu công nghiệp Ngọc Hồi, Thanh Trì, Hà Nội</p>
+          <p><strong style="color:#e98348;">Mobile:</strong> 0868 191 666 - 0868 565 191</p>
+          <p><strong style="color:#e98348;">Email:</strong> DANCO868191666@gmail.com</p>
       </div>
-      <div class="col-md-6 col-sm-6" style="text-align: center">
-          <p><strong style="color:#e98348;">Phòng Kinh doanh Đà Nẵng</strong></p>
+      <div class="col-md-6 col-sm-6" style="text-align: left;">
+          <!-- <p><strong style="color:#e98348;">Phòng Kinh doanh Đà Nẵng</strong></p>
           <p>Kinh doanh 1 - Thomas Phạm 0868 191 666</p>
           <p>Địa chỉ: 150 Ỷ Lan Nguyên Phi, Hải Châu, Đà Nẵng.</p>
-          <p>Email: NDNoithatkhachsan@gmail.com.</p>
+          <p>Email: NDNoithatkhachsan@gmail.com.</p> -->
+          <p><span class="fa-heart-o"></span><span class="lable_footer">Chuyên sản xuất và phân phối trực tiếp các sản phẩm chăn ga gối khách sạn dòng cao cấp – </span><i>Professional direct manufacture and distribution of hotel bedding linens!</i></p>
+          <p><span class="fa-heart-o"></span><span class="lable_footer">Chăm chút nâng niu khách hàng của Quý vị là ưu tiên số 1 của Danco! – </span><i>Your guests, our priority! Since 2007!</i></p>
+          <p><span class="fa-heart-o"></span><span class="lable_footer">Thiết kế ấn tượng tạo sự thoải mái êm ái cho khách lưu trú! – </span><i>Danco  Inspirational design !</i></p>
+          <p><span class="fa-heart-o"></span><span class="lable_footer">Đa dạng mẫu sản phẩm! – </span><i>Wide diversified furnishings !</i></p>          
+      </div>
+      <div id="cfacebook" style="right:103px;">
+        <a href="javascript:;" class="chat_fb" onclick="return:false;"><i class="fa fa-facebook-square"></i> Hỗ trợ trực tuyến</a>
+        <div class="fchat">
+        <div class="fb-page" data-tabs="messages" data-href="<%$facebook_page%>" data-width="250" data-height="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false"></div>
+        </div>
       </div>
     </div>
 </div>
@@ -156,3 +171,18 @@
   js.src = "//connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.9&appId=807407399380069";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.9";
+  fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
+  <style>#cfacebook{position:fixed;bottom:0px;right:100px;z-index:999999999999999;width:250px;height:auto;box-shadow:6px 6px 6px 10px rgba(0,0,0,0.2);border-top-left-radius:5px;border-top-right-radius:5px;overflow:hidden;}#cfacebook .fchat{float:left;width:100%;height:270px;overflow:hidden;display:none;background-color:#fff;}#cfacebook .fchat .fb-page{margin-top:-130px;float:left;}#cfacebook a.chat_fb{float:left;padding:0 25px;width:250px;color:#fff;text-decoration:none;height:40px;line-height:40px;text-shadow:0 1px 0 rgba(0,0,0,0.1);background-image:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAqCAMAAABFoMFOAAAAWlBMV…8/UxBxQDQuFwlpqgBZBq6+P+unVY1GnDgwqbD2zGz5e1lBdwvGGPE6OgAAAABJRU5ErkJggg==);background-repeat:repeat-x;background-size:auto;background-position:0 0;background-color:#3a5795;border:0;border-bottom:1px solid #133783;z-index:9999999;margin-right:12px;font-size:18px;}#cfacebook a.chat_fb:hover{color:yellow;text-decoration:none;}</style>
+  <script>
+  jQuery(document).ready(function () {
+  jQuery(".chat_fb").click(function() {
+jQuery('.fchat').toggle('slow');
+  });
+  });
+  </script>
