--- a/app/template/fontend/template1/include/left.html
+++ b/app/template/fontend/template1/include/left.html
@@ -44,8 +44,8 @@
                 <span>Liên Hệ Nhanh</span>
             </div>
             <div class="panel-body">
-                <p class="phone"><span>(844)91 332 5588</span></p>
-                <p class="email"> <span>noithatngocdan@gmail.com</span></p>
+                <p class="phone"><span>0868 191 666 - 0868 565 181</span></p>
+                <p class="email"> <span>DANCO868191666@gmail.com</span></p>
             </div>
     </div>
     <div class="panel panel-cam-ket">
