--- a/app/template/fontend/template1/include/menu.html
+++ b/app/template/fontend/template1/include/menu.html
@@ -1,6 +1,12 @@
 
       <div class="row header_top">
          <div class="container" id="header">
+          <div class="col-md-6 col-sm-6">
+              
+              <img src="<%$smarty.const.ACW_BASE_URL_TEMPLATE%>/images/logo.png" style="margin-top:10px ">  
+                 
+          </div>
+          <div class="col-md-6 col-sm-6">
             <div class="row"  > 
                <div class="link-cart">
                   <a href="<%$smarty.const.ACW_BASE_URL%>cart">
@@ -21,26 +27,24 @@
                   </li>
                </ul>
                    		  
-            </div>
-            <div class="row">
-
-               <div class="col-md-6" style="float: left">
-                  <img src="<%$smarty.const.ACW_BASE_URL_TEMPLATE%>/images/logo.png">
-               </div>
-               <div class="col-md-6" style="padding-right: 0px">
-                  <div class="row">
-                  <form class="search" >
-                    <input type="" name="" placeholder="Tìm sản phẩm .." class="search_input">  
-                    <input type="submit" value="" style="width: 1px;height: 1px;opacity: 0;padding: 0px;border: none">
-                  </form>
-                  </div>
-                  <div class="row">                     
-                     <div class="hotline-top">
-                            <span class="icon"></span>
-                            <span>Hotline: <span>(844)91 332 5588</span></span>
-                     </div>          
-                  </div>
-               </div>
+              </div>
+              <div class="row">
+                 
+                 <div  style="padding-right: 0px;float: right;">
+                    <div class="row">
+                    <form class="search" >
+                      <input type="" name="" placeholder="Tìm sản phẩm .." class="search_input">  
+                      <input type="submit" value="" style="width: 1px;height: 1px;opacity: 0;padding: 0px;border: none">
+                    </form>
+                    </div>
+                    <div class="row">                     
+                       <div class="hotline-top">
+                              <span class="icon"></span>
+                              <span>Hotline: <span>0868 191 666 - 0868 565 181</span></span>
+                       </div>          
+                    </div>
+                 </div>
+              </div>
             </div>
          </div>
       </div>
@@ -107,7 +111,7 @@
          <div class="container text_top">
             <div class="col-md-3 col-sm-6">
                             <span class="icon icon1"></span>
-                                <span class="text">Hoàn tiền 100% nếu không <br> hài lòng về sản phẩm </span>
+                                <span class="text">Đa dạng mẫu <br>sản phẩm!</span>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <span class="icon icon2"></span>
