--- a/app/template/fontend/template2/danhmuc/content.html
+++ b/app/template/fontend/template2/danhmuc/content.html
@@ -16,7 +16,10 @@
                                  <div class="on-sale">Sale</div>
                               <%/if%>
                                  <div class="product-image">
-                                    <a href="<%$smarty.const.ACW_BASE_URL%>sanpham/v/<%$item.pro_no%>"><img src="<%$smarty.const.ACW_BASE_URL_DATA%><%$item.img_thumb%>" alt="<%$item.pro_name%>"></a>
+                                    <a href="<%$smarty.const.ACW_BASE_URL%>sanpham/v/<%$item.pro_no%>">
+                                       <img src="<%$smarty.const.ACW_BASE_URL_DATA%><%$item.img_thumb%>" alt="<%$item.pro_name%>">
+                                       <img class="">
+                                    </a>
                                  </div>
                                  <div class="overlay hidden-sm hidden-xs">
                                     <a class="popup-text quick-view-btn btn_c cart_btn_1" href="<%$smarty.const.ACW_BASE_URL%>sanpham/v/<%$item.pro_no%>" data-effect="mfp-move-from-top" data-toggle="tooltip" data-placement="top" title="Quick View">Đặt hàng</a>
