--- a/app/template/fontend/template1/cart.html
+++ b/app/template/fontend/template1/cart.html
@@ -156,15 +156,15 @@
                                        </tr>
                                        <%/foreach%>
                                        <tr class="spline">
-                                          <td width="50%" class="sanpham" colspan="3">Tổng cộng (giá chưa bao gồm VAT)</td>
-                                          <td width="25%" align="right"><span class="woocommerce-Price-amount amount" id="total_amount_1"><%Sanpham_model::currency_format($total_amount)%><span class="woocommerce-Price-currencySymbol">₫</span></span></td>
+                                          <td width="40%" class="sanpham" >Tổng cộng (giá chưa bao gồm VAT)</td>
+                                          <td width="40%" align="right" colspan="3"><span class="woocommerce-Price-amount amount" id="total_amount_1"><%Sanpham_model::currency_format($total_amount)%><span class="woocommerce-Price-currencySymbol">₫</span></span></td>
                                           <td></td>
                                        </tr>
                                        <tr class="order-total">
                                        </tr>
                                        <tr class="spline">
-                                          <td width="50%" class="sanpham" colspan="3">Thanh toán</td>
-                                          <td width="25%" align="right"><strong><span class="woocommerce-Price-amount amount" id="total_amount_2"><%Sanpham_model::currency_format($total_amount)%><span class="woocommerce-Price-currencySymbol">₫</span></span></strong> </td>
+                                          <td width="40%" class="sanpham" >Thanh toán</td>
+                                          <td width="40%" align="right" colspan="3"><strong><span class="woocommerce-Price-amount amount" id="total_amount_2"><%Sanpham_model::currency_format($total_amount)%><span class="woocommerce-Price-currencySymbol">₫</span></span></strong> </td>
                                           <td></td>
                                        </tr>
                                     </tbody>
