--- a/app/template/fontend/template1/include/footer.html
+++ b/app/template/fontend/template1/include/footer.html
@@ -1,4 +1,24 @@
 <div class="row">
+         <div class="container text_top">
+            <div class="col-md-3 col-sm-6">
+                            <span class="icon icon1"></span>
+                                <span class="text">Đa dạng mẫu <br>sản phẩm!</span>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <span class="icon icon2"></span>
+                                <span class="text">Giao hàng <br> toàn quốc</span>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <span class="icon icon3"></span>
+                                <span class="text">Thanh toán khi <br> nhận hàng </span>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <span class="icon icon4"></span>
+                            <span class="text">Mua hàng nhanh <br>  18001566</span>
+                        </div>
+         </div>                                
+</div>
+<div class="row">
    <div class="container">
       <img style="width: 100%;margin-top: 10px;" src="<%$smarty.const.ACW_BASE_URL_TEMPLATE%>/images/quang-cao-5-1.jpg">
    </div>
@@ -11,11 +31,11 @@
    <%assign var="sanphams" value=Sanpham_model::get_sanpham_moi()%>   
    <div class="owl-sp-ban-chay owl-carousel owl-theme" style="opacity: 1; display: block;">
       <div class="owl-wrapper-outer">
-         <div class="owl-wrapper" style="width: 2850px; left: 0px; display: block;">
+         <div class="owl-wrapper col-sm-12" style="left: 0px; display: block;padding: 0px">
           <%foreach $sanphams as $key=>$pro%>
-            <div class="owl-item" style="width: 285px;">
+            <div class="owl-item col-md-3 col-sm-4 col-sx-6" style="padding-left: 0px">
                <div class="item-product" >
-                  <div class="img-product" style="height: 183px;">
+                  <div class="img-product" >
                      <a href="<%$smarty.const.ACW_BASE_URL%>sanpham/v/<%$pro.pro_no%>"><img  src="<%$smarty.const.ACW_BASE_URL_DATA%><%$pro.img_thumb%>" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="<%$pro.pro_name%>"  sizes="(max-width: 600px) 100vw, 600px">
                         <%if $pro.giamgia > 0%>
                            <div class="lable_sale">
