--- a/app/template/fontend/template1/include/left.html
+++ b/app/template/fontend/template1/include/left.html
@@ -1,6 +1,7 @@
-<div class="col-sm-3 sidebar-left" style="padding-left: 0">
+<div class="col-md-3 col-sm-12 col-xs-12 sidebar-left" style="padding-left: 0">
                <div class="panel panel-danh-muc">
                   <div class="panel-heading">
+                      <span class="fa-bars"></span>
                       <span>Danh Mục Sản Phẩm</span>
                   </div>
                   
