--- a/app/template/fontend/template1/include/header.html
+++ b/app/template/fontend/template1/include/header.html
@@ -1,8 +1,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="<%$smarty.const.ACW_BASE_URL_TEMPLATE%>/css/bootstrap.css" rel="stylesheet" type="text/css">
-<link href="<%$smarty.const.ACW_BASE_URL_TEMPLATE%>/css/style.css" rel="stylesheet" type="text/css">
+<link href="<%$smarty.const.ACW_BASE_URL_TEMPLATE%>/css/style.css" rel="stylesheet" type="text/css" media="all">
 <link href="<%$smarty.const.ACW_BASE_URL_TEMPLATE%>/css/owl.carousel.css" rel="stylesheet" type="text/css">
 <link href="<%$smarty.const.ACW_BASE_URL_TEMPLATE%>/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-<link href="<%$smarty.const.ACW_BASE_URL_TEMPLATE%>/css/responsive.css" rel="stylesheet" type="text/css">
+<link href="<%$smarty.const.ACW_BASE_URL_TEMPLATE%>/css/responsive.css" rel="stylesheet" type="text/css" media="all">
 <script type="text/javascript" src="<%$smarty.const.ACW_BASE_URL_TEMPLATE%>/js/jquery.min.js"></script>
 <script type="text/javascript" src="<%$smarty.const.ACW_BASE_URL_TEMPLATE%>/js/bootstrap.min.js"></script>
