--- a/app/template/fontend/template1/include/menu.html
+++ b/app/template/fontend/template1/include/menu.html
@@ -1,12 +1,20 @@
 
       <div class="row header_top">
          <div class="container" id="header">
-          <div class="col-md-6 col-sm-6">
+          <div class="col-md-3 col-sm-3 col-xs-7">
               
-              <img src="<%$smarty.const.ACW_BASE_URL_TEMPLATE%>/images/logo.png" style="margin-top:10px ">  
+              <img class="logo" src="<%$smarty.const.ACW_BASE_URL_TEMPLATE%>/images/logo.png" >  
                  
           </div>
-          <div class="col-md-6 col-sm-6">
+          <div class="col-md-4 col-sm-9 col-xs-5">
+              <div class="row">                     
+                  <div class="hotline-top">
+                      <span class="icon"></span>
+                      <span>Hotline: <span>0868 191 666 - 0868 565 181</span></span>
+                  </div>          
+              </div>
+          </div>
+          <div class="col-md-5 col-sm-9 col-xs-5">
             <div class="row"  > 
                <div class="link-cart">
                   <a href="<%$smarty.const.ACW_BASE_URL%>cart">
@@ -37,19 +45,13 @@
                       <input type="" name="" placeholder="Tìm sản phẩm .." class="search_input">  
                       <input type="submit" value="" style="width: 1px;height: 1px;opacity: 0;padding: 0px;border: none">
                     </form>
-                    </div>
-                    <div class="row">                     
-                       <div class="hotline-top">
-                              <span class="icon"></span>
-                              <span>Hotline: <span>0868 191 666 - 0868 565 181</span></span>
-                       </div>          
-                    </div>
+                    </div>                    
                  </div>
               </div>
             </div>
          </div>
       </div>
-      <div class="row" style="background: #e98348;">
+      <div class="row" style="background: #e98348; margin-bottom: 20px">
          <div class="container" >
             <%assign var="menus" value=Menu_model::get_menus()%> 			
             <div id="menu_top">
@@ -108,24 +110,6 @@
             </div>
          </div>
       </div>
-      <div class="row">
-         <div class="container text_top">
-            <div class="col-md-3 col-sm-6">
-                            <span class="icon icon1"></span>
-                                <span class="text">Đa dạng mẫu <br>sản phẩm!</span>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <span class="icon icon2"></span>
-                                <span class="text">Giao hàng <br> toàn quốc</span>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <span class="icon icon3"></span>
-                                <span class="text">Thanh toán khi <br> nhận hàng </span>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <span class="icon icon4"></span>
-                            <span class="text">Mua hàng nhanh <br>  18001566</span>
-                        </div>
-         </div>                                
-      </div>
+
+      
       
