--- a/app/template/fontend/template1/index.html
+++ b/app/template/fontend/template1/index.html
@@ -7,7 +7,7 @@
       <div class="row">
          <div class="container" id="content">
             
-            <div class="col-sm-9 content-main">
+            <div class="col-md-9 col-sm-12 col-xs-12 content-main">
                <div id="myCarousel" class="carousel <!--slide-->" data-ride="carousel" data-interval="2500">
                   <%assign var="slides" value=Slides_model::get_slides()%> 				    <!-- Indicators --> 				    
                   <ol class="carousel-indicators">
@@ -18,7 +18,8 @@
                   <!-- Wrapper for slides --> 				    
                   <div class="carousel-inner">
                      <%foreach $slides as $key=>$item%> 					      
-                     <div class="item <%if $key==0%> active<%/if%>"> 					        <img src="<%$smarty.const.ACW_BASE_URL%><%$item.img_path%>" alt="" style="width:100%; height:358;"> 					      </div>
+                     <div class="item <%if $key==0%> active<%/if%>"> 					        <img src="<%$smarty.const.ACW_BASE_URL%><%$item.img_path%>" alt="" style="width:100%; height:auto;"> 	<!-- height:358;		 -->		      
+                     </div>
                      <%/foreach%> 				    
                   </div>
                   <!-- Left and right controls --> 				    <a class="left carousel-control" href="#myCarousel" data-slide="prev"> 				      <span class="glyphicon glyphicon-chevron-left"></span> 				      <span class="sr-only">Previous</span> 				    </a> 				    <a class="right carousel-control" href="#myCarousel" data-slide="next"> 				      <span class="glyphicon glyphicon-chevron-right"></span> 				      <span class="sr-only">Next</span> 				    </a> 				  
