--- a/shared/template1/css/responsive.css
+++ b/shared/template1/css/responsive.css
@@ -7,7 +7,7 @@
   .navbar .navbar-nav > li > a {
     padding: 0 13px;
   }
-  .text-top .text {
+  .text_top .text {
     font-size: 11px;
   }
   .links ul a {
@@ -19,8 +19,24 @@
     padding: 0 6px;
     font-size: 10px;
   }
-  .logo img {
+  img.logo  {
     width: 200px;
+  }
+  #menu_top ul li a{
+    padding: 0 6px;
+    font-size: 11px;
+  }
+  .item-product .img-product{
+     height: 145px;
+  }
+  .text_top .col-md-3{
+    width: 25%;
+    height: 115px;
+  }
+  .text_top .text {
+    display: block;
+    text-align: center;
+    font-size: 11px;
   }
 embed
 {
@@ -56,6 +72,12 @@ display:none;
   }
 }
 @media (max-width: 479px) {
+  img.logo{
+     width: 160px;
+  }
+  .search_input{
+    width: 266px;
+  }
   .form-search input {
     width: 170px;
   }
@@ -77,7 +99,7 @@ display:none;
   .header-top .logo img {
     width: 168px;
   }
-  .text-top {
+  .text_top {
     display: none;
   }
   .slide-top .caption {
@@ -116,12 +138,12 @@ display:none;
   .header-top .logo {
     padding-top: 15px;
   }
-  .text-top .text {
+  .text_top .text {
     display: block;
     text-align: center;
     font-size: 11px;
   }
-  .text-top .icon {
+  .text_top .icon {
     height: 30px;
     width: 100% !important;
     background-size: auto 100%;
@@ -132,7 +154,7 @@ display:none;
     margin-right: 0;
 
   }
-  .text-top .col-md-3 {
+  .text_top .col-md-3 {
     width: 25%;
     height: 115px;
   }
@@ -178,12 +200,12 @@ display:none;
     padding-top: 9px;
   }
   
-  .text-top .text {
+  .text_top .text {
     display: block;
     text-align: center;
     font-size: 11px;
   }
-  .text-top .icon {
+  .text_top .icon {
     height: 30px;
     width: 100% !important;
     background-size: auto 100%;
@@ -194,7 +216,7 @@ display:none;
     margin-right: 0;
 
   }
-  .text-top .col-md-3 {
+  .text_top .col-md-3 {
     width: 25%;
     height: 115px;
     float: left;
@@ -244,7 +266,7 @@ display:none;
   }
 }
 @media (max-width: 640px) {
-  .text-top {
+  .text_top {
     display: none;
   }
   .links-top {
