--- a/shared/template1/css/style.css
+++ b/shared/template1/css/style.css
@@ -4,6 +4,9 @@ body {
     font-size: 12;
     font-family: Tahoma, Times New Roman, Arial;
 }
+img{
+  max-width: 100%;
+}
 a,a:hover{
   text-decoration: none;
 }
@@ -12,8 +15,9 @@ a,a:hover{
     margin-right: 0px;
 }
 .header_top{
-    background:url(http://tentenwordpress2.top/wp-content/themes/temp02/img/icon/header_bg.jpg) no-repeat right #150f11;
-    height: 170px;
+    /*background:url(http://tentenwordpress2.top/wp-content/themes/temp02/img/icon/header_bg.jpg) no-repeat right #150f11;*/
+   
+    background: #e1d0d0;
 }
 ul.nav_top{
     float: right;
@@ -42,6 +46,9 @@ ul.nav_top li a {
 ul.nav_top li a:hover {
     color: #e98348; 
 }
+img.logo{
+  width:200px;
+}
 .link-cart{
     width: 77px;
     height: 46px;
@@ -68,7 +75,7 @@ ul.nav_top li a:hover {
 }
 .search{
     float: right;
-    margin-top: 15px;
+    margin-top: 10px;
 }
 .search_input{
     width: 350px;
@@ -87,6 +94,7 @@ ul.nav_top li a:hover {
   font-weight: 400;
   font-size: 17px;
   float: right;
+  margin-top: 40px;
 }
 
 .hotline-top .icon {
@@ -258,7 +266,7 @@ ul.vertical_bar li a:hover {
 .panel {
     border-radius: 0;
     border-width: 1px 1px 1px;
-    border-color: #dddddd;
+    border-color: #046743;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
 }
 .panel-danh-muc {
@@ -271,9 +279,9 @@ ul.vertical_bar li a:hover {
 
 }
 
-.panel-danh-muc .panel-heading {
+/*.panel-danh-muc .panel-heading {
 
-  background-color: #f5f5f5;
+  background-color: #046743;
 
   color: #535353;
 
@@ -289,7 +297,7 @@ ul.vertical_bar li a:hover {
 
   text-transform: uppercase;
 
-}
+}*/
 
 .panel-danh-muc a {
 
@@ -312,6 +320,9 @@ ul.vertical_bar li a:hover {
 
   color: #fb8404;
 
+}
+.panel-danh-muc .list-group-item{
+  border: 1px solid #046743;
 }
 
 .panel-danh-muc a:after {
@@ -338,7 +349,7 @@ ul.vertical_bar li a:hover {
 
   padding: 0;
 
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #46743;
 
 }
 
@@ -413,9 +424,9 @@ min-width: 200px;
 
 .panel-danh-muc .panel-heading {
 
-  background-color: #f5f5f5;
+  background-color: #046743;
 
-  color: #535353;
+  color: #fff;
 
   background-repeat: no-repeat;
 
@@ -483,7 +494,7 @@ min-width: 200px;
 
   padding: 0;
 
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #46743;
 
 }
 
@@ -818,6 +829,7 @@ min-width: 200px;
 
 .item-product .img-product {
   position: relative;
+  height: 183px;
 }
 
 .item-product .img-product img {
@@ -1032,7 +1044,7 @@ transition: all 500ms ease-out 0s;
 }
 .owl-sp-hot .item-product,
 .owl-sp-ban-chay .item-product {
-  padding: 0 10px;
+  padding: 0;
 }
 /*end item product*/
 /*panel hotline*/
@@ -1317,7 +1329,8 @@ transition: all 500ms ease-out 0s;
 .col-md-12 {
   padding: 0 10px;
 }
-@media (max-width: 767px){
+
+@media (max-width: 768px){
     .menu_mobi {
         display: block;
     }
@@ -1346,7 +1359,13 @@ transition: all 500ms ease-out 0s;
 .header-top .right{float:none}
 .navbar .navbar-nav > li > a{font-size:12px!important}
 .sidebar-left, .content-main{float:left; width:100%}
-.chinh-sach .title{font-size:16px}
+.chinh-sach .title{
+  font-size:13px;
+  font-family: Tahoma,Arial,Time News Roman;
+}
+.cong-dong-google .heading{
+  font-size:13px;
+}
 .cot2{margin-top:20px}
 }
 .fa-heart-o {
@@ -1356,6 +1375,17 @@ transition: all 500ms ease-out 0s;
   color: #e98348;  
   font-weight: bold;
 }
+.fa-bars {
+  content: "\f0c9";
+  font-family: 'FontAwesome';
+  position: absolute;
+  color: #fff;  
+  font-weight: bold;
+  left: 15px;
+  font-size: 18px;
+  top: 8px;
+}
+
 .lable_footer{
     padding-left: 20px;
 }
@@ -1373,4 +1403,11 @@ transition: all 500ms ease-out 0s;
     font-family: Tahoma;
     font-size: 14px;
      top: 0;
+}
+.carousel-inner .item img{
+   height:  calc((width * 358/854)px);
+}
+.list-inline > li
+{
+  padding-right: 0;
 }
