--- a/app/template/fontend/template1/include/menu.html
+++ b/app/template/fontend/template1/include/menu.html
@@ -6,7 +6,7 @@
               <img class="logo" src="<%$smarty.const.ACW_BASE_URL_TEMPLATE%>/images/logo.png" >  
                  
           </div>
-          <div class="col-md-4 col-sm-9 col-xs-5">
+          <div class="col-md-4 col-sm-9 col-xs-5 hide_for_phone">
               <div class="row">                     
                   <div class="hotline-top">
                       <span class="icon"></span>
